# vuestorefrontmagento2importer

./: .gitignore  .npmrc  dump.rdb  package.json
config/: config.json  default.json
logs/: stocks.txt
rust/: Cargo.toml  config.json
rust/src/: main.rs
rust/src/adapters/: attributes.rs  category.rs  mod.rs  product.rs
rust/src/config/: mod.rs
rust/src/elasticsearch/: mod.rs
rust/src/entities/: attribute.rs  category.rs  mod.rs  product.rs
rust/src/mageimpoter/: mod.rs  worker.rs
rust/src/magentoclient/: mod.rs
src/: cli.js  config.js  log.js
src/adapters/: abstract-new.js  abstract.js  factory.js  importer.js
src/adapters/magento/: abstract.js  attribute.js  cache_keys.js  category.js  cms_block.js  cms_page.js  product.js  product_new.js  product_old.js  productcategories.js  review.js  stock.js  stocks.js  taxrule.js
src/adapters/magento/magento2-rest-client/: index.js
src/adapters/magento/magento2-rest-client/lib/: attributes.js  pages.js  products_new.js  rest_client.js  stock_items.js
src/adapters/nosql/: abstract.js  elasticsearch.js
src/helpers/: es-remapper.js  mapping-utils.js  multistore-utils.js  reindex-utils.js
src/product-cache/: product-cache.js
src/watcher/: cli.js  creator.js  entity.js  executor.js  index.js  job-manager.js  test.js  test_append.js  watch.js  worker.js
